# music-app

./: .gitignore  AGENTS.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
scripts/: release-tag.mjs
src/: App.tsx  index.css  types.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  types.rs
src-tauri/src/commands/: download.rs  mod.rs  search.rs  settings.rs  stream.rs
src-tauri/src/utils/: ytdlp.rs
src/components/: DownloadList.tsx  DownloadModal.tsx  Player.tsx  SearchBar.tsx  Settings.tsx  TrackCard.tsx  TrackList.tsx
src/hooks/: useAudio.ts  useDownload.ts  useSearch.ts  useSettings.ts  useUpdater.ts
src/lib/: tauri.ts
src/stores/: playerStore.ts
